<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpBtn">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:background="@drawable/rounded_corner"
        android:clipToOutline="true"
        android:text="Signing Up"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:paddingLeft="10dp"
        android:paddingTop="12dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="227dp"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="218dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="160dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="227dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="218dp"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="160dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="227dp"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="218dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="160dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="227dp"
        android:layout_marginTop="390dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="218dp"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="160dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="227dp"
        android:layout_marginTop="460dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="218dp"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="160dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="227dp"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/editTextConPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="218dp"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="160dp"/>

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="180dp"
        android:backgroundTint="@color/grey"
        android:onClick="SendDataBtn"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        app:cornerRadius="20dp" />
</RelativeLayout>