<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInBtn">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:background="@drawable/rounded_corner"
        android:clipToOutline="true"
        android:text="Loging in"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="227dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="218dp"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="150dp"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="343dp"
        android:layout_below="@id/editTextTextEmailAddress"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="150dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="356dp"
        android:layout_below="@id/textView2"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="35dp"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/LogInbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/grey"
        android:text="@string/log_in"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        android:onClick="onClickSign"/>

</RelativeLayout>